@@ -1,5 +1,11 @@
 2010-08-31  Alexey Proskuryakov  <ap@apple.com>
 
+        Build fix.
+
+        * Shared/WebPreferencesStore.h: Actually remove encode(), which has been moved to WebPreferencesStore.cpp.
+
+2010-08-31  Alexey Proskuryakov  <ap@apple.com>
+
         Reviewed by Sam Weinig.
 
         https://bugs.webkit.org/show_bug.cgi?id=42195
